# wind_turbine_analytics

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
dags/: wind_turbine_analytics.py
data/: data_error.csv
database/: init.sql  setup_connections.sql
src/: driver.py
src/test/: stubs.py  test_publish.py  test_transform.py
src/wind_turbine_analytics/: ingest.py  publish.py  schema.py  tasks.py  transform.py
