[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "line-of-business"
version = "0.5.1+0"
description = "My package description"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pyspark==3.5.4",
    "delta-spark==3.3.0",
    "pytest-spark==0.6.0",
    "pyspark-test==0.2.0"
]

[project.urls]
publish = "s3://amlqv-emr-dev/deployments"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]
