[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wind-turbine-analytics"
version = "0.1.0"
description = "Wind turbine analytics"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pyspark==3.5.4",
    "delta-spark==3.3.0",
    "pytest-spark==0.6.0",
    "pyspark-test==0.2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "integration: marks tests as integration tests"
]